--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# Compiled source #
-###################
+### Compiled source ###
 *.com
 *.class
 *.dll
@@ -7,8 +6,7 @@
 *.o
 *.so
 
-# Packages #
-############
+### Packages ###
 # it's better to unpack these files and commit the raw source
 # git has its own built in compression methods
 *.7z
@@ -20,14 +18,12 @@
 *.tar
 *.zip
 
-# Logs and databases #
-######################
+### Logs and databases ###
 *.log
 *.sql
 *.sqlite
 
-# OS generated files #
-######################
+### OS generated files ###
 .DS_Store
 .DS_Store?
 ._*
@@ -36,6 +32,7 @@
 ehthumbs.db
 Thumbs.db
 
+### Maven files ###
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -46,3 +43,30 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
+
+### Output files ###
+results/
+test-output/
+!.mvn/wrapper/maven-wrapper.jar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
